--- a/things/templates/home.html
+++ b/things/templates/home.html
@@ -9,7 +9,7 @@
   <p>Some stuff about things goes here.</p>
   <form action="{% url 'home' %}" method="post">
     {% csrf_token %}
-    {{} form.as_p }}
+    {{ form.as_p }}
     <input type="submit" value="Sign up" class="btn btn-primary">
   </form>
 </body>
